tests/should_fail/type_int_as_bool.nv
module main

// SHOULD FAIL: assigning Int to a Bool variable
let x: Bool = 42
